--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="hush-interface">
             <div class="menu active">
-                <div class="img1"><img src="/20230105_173727.png"></div>
+                <div class="img1"><img src="20230105_173727.png"></div>
 
                 <div class="button1"><a href="#">Join the waitlist</a></div>
             </div>
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="img-border">
-                            <img class="iphone" src="/iphone.webp">
+                            <img class="iphone" src="iphone.webp">
                         </div>
                     </div>
                 </div>
