--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </section>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-        <script src="/hush.js"></script>
+        <script src="hush.js"></script>
     </body>
 
 </html>
