--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="b">
                     <div class="form hidden">
                         <div class="container">
-                            <form id="form" action="/">
+                            <form id="form" action="">
                                 <h2>Join the evolving world of event contracts</h2>
                                 <div class="input-field">
                                     <label for="name">First Name</label>
@@ -61,11 +61,7 @@
                                     <input id="email" name="name" placeholder="enter your email" type="text">
                                     <div class="error"></div>
                                 </div>
-                                <!-- <div class="input-field"><label for="Date of birth">Date of birth</label>
-                                    <input type="text" placeholder="Date of birth *" id="DOB" name="name"
-                                        onfocus="(this.type='date')">
-                                </div> -->
-                                <div class="input-field">
+                                f                                <div class="input-field">
                                     <label for="country">Country</label>
                                     <select id="country" name="name">
                                         <option style="color:#d3d2d2;"> Select a country</option>
