--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hush | Coming Soon</title>
         <link rel="stylesheet" href="styles.css">
+        <script defer src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script defer src="hush.js"></script>
     </head>
 
     <body>
@@ -339,8 +341,6 @@
                 </div>
             </section>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-        <script src="hush.js"></script>
     </body>
 
 </html>
