--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
                 <div class="border">
                     <div class="border-content">
                         <div class="content">
-                            <div class="content1">
+                            <div class="content1 IU2">
                                 <h1>You can now trade on <span class="type"></span></h1>
                                 <h1>like stocks!</h1>
                             </div>
-                            <div class="content1a">
+                            <div class="content1a IU3">
                                 <p>We are building the first event contract trading platform in Africa. Make profits
                                     from
                                     trading your opinions and views on local and global events while managing your
                                     financial
                                     risk.</p>
                             </div>
-                            <div class="content1b">
+                            <div class="content1b IU1">
                                 <a href="#">Be the first to know when we launch</a>
                             </div>
                         </div>
                         <div class="img-border">
-                            <img class="iphone" src="iphone.webp">
+                            <img class="iphone IU" src="iphone.webp">
                         </div>
                     </div>
                 </div>
